# django-allauth

./: .coveragerc  .deepsource.toml  .dir-locals.el  .djlintrc  .dockerignore  .editorconfig  .envrc  .gitignore  .isort.cfg  .pep8  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .woodpecker.yaml  AUTHORS  CONTRIBUTING.rst  ChangeLog  ChangeLog.md  ChangeLog.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  TODO  TODO.org  Venenorosmd@msn.com  devenv.nix  manage.py  mise.toml  noxfile.py  package-lock.json  package.json  pull_request_template.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  script.py  (+7 more)
.gitea/: pull_request_template.md
.gitea/ISSUE_TEMPLATE/: discussion.md  issue.md
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml
.tx/: config
allauth/: __init__.py  admin.py  app_settings.py  apps.py  compat.py  conftest.py  context_processors.py  decorators.py  exceptions.py  models.py  nonrel.py  ratelimit.py  tests.py  urls.py  utils.py  widgets.py
allauth docs/: advanced.rst  decorators.rst  installation.rst  providers.rst  signals.rst  views.rst
allauth/account/: .forms.py.swp  .urls.py.swp  .views.py.swp  __init__.py  adapter.py  admin.py  anonymizers.py  app_settings.py  apps.py  auth_backends.py  authentication.py  checks.py  context_processors.py  decorators.py  fields.py  forms.py  managers.py  middleware.py  mixins.py  models.py  reauthentication.py  receivers.py  signals.py  stages.py  tests.py  urls.py  utils.py  views.py
allauth/account/internal/: __init__.py  constants.py  decorators.py  emailkit.py  stagekit.py  templatekit.py  textkit.py  userkit.py
allauth/core/: context.py  exceptions.py  ratelimit.py
allauth/facebook/: admin.py  forms.py  login.py  models.py  urls.py  views.py
allauth/headless/: adapter.py  app_settings.py  apps.py  auth.py  checks.py  conftest.py  constants.py  urls.py
allauth/idp/: urls.py
allauth/locale/: no
allauth/mfa/: TODO.org  adapter.py  admin.py  app_settings.py  apps.py  checks.py  forms.py  middleware.py  models.py  recovery_codes.py  signals.py  stages.py  totp.py  urls.py  utils.py  views.py  webauthn.py
allauth/openid/: admin.py  forms.py  models.py  urls.py  views.py
allauth/schema/: types.py
allauth/socialaccount/: .adapter.py.swp  .app_settings.py.swp  .models.py.swp  __init__.py  adapter.py  admin.py  anonymizers.py  app_settings.py  apps.py  auth.py  checks.py  conftest.py  context_processors.py  defs.py  fields.py  forms.py  helpers.py  models.py  nonrel.py  oauth.py  requests.py  sessions.py  signals.py  tests.py  urls.py  views.py
allauth/templates/: account - Shortcut.lnk  base.html  base.txt
allauth/templatetags/: allauth.py  allauth_tags.py
allauth/tests/: test_utils.py
allauth/twitter/: admin.py  models.py  urls.py  utils.py  views.py
allauth/usersessions/: adapter.py  admin.py  app_settings.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
docs/: Makefile  advanced.rst  changelog.rst  conf.py  configuration.rst  decorators.rst  faq.rst  forms.rst  index.rst  installation.rst  overview.rst  providers.rst  release-notes.rst  requirements.txt  settings.py  showcase.rst  signals.rst  support.rst  templates.rst  views.rst
docs/account/: adapter.rst  advanced.rst  configuration.rst  email.rst  forms.rst  index.rst  introduction.rst  phone.rst  rate_limits.rst  signals.rst  templates.rst  views.rst
docs/common/: admin.rst  configuration.rst  email.rst  https.rst  index.rst  messages.rst  rate_limits.rst  templates.rst
docs/headless/: adapter.rst  api.rst  configuration.rst  cors.rst  faq.rst  index.rst  installation.rst  integrations.rst  introduction.rst  tokens.rst
docs/idp/: index.rst
docs/installation/: examples.rst  index.rst  quickstart.rst  requirements.rst
docs/introduction/: index.rst
docs/mfa/: adapter.rst  advanced_configuration.rst  configuration.rst  django-allauth-2fa.rst  forms.rst  index.rst  introduction.rst  signals.rst  webauthn.rst
docs/project/: contributing.rst  funding.rst  index.rst  support.rst
docs/providers/: agave.rst  apple.rst  auth0.rst  authentiq.rst  cern.rst  cilogon.rst  clever.rst  dingtalk.rst  discord.rst  dropbox.rst  edx.rst  eventbrite.rst  facebook.rst  feishu.rst  figma.rst  gitea.rst  github.rst  google.rst  index.rst  jupyterhub.rst  kakao.rst  netiq.rst  nextcloud.rst  notion.rst  openstreetmap.rst  paypal.rst  pinterest.rst  quickbooks.rst  reddit.rst  salesforce.rst  saml.rst  slack.rst  snapchat.rst  stackexchange.rst  steam.rst  strava.rst  stripe.rst  telegram.rst  weixin.rst  xing.rst  (+3 more)
docs/release-notes/: 2012.rst  2013.rst  2014.rst  2015.rst  2016.rst  2017.rst  2018.rst  2019.rst  2020.rst  2021.rst  2022.rst  2023.rst  2024.rst  history.rst  index.rst
docs/socialaccount/: adapter.rst  advanced.rst  configuration.rst  forms.rst  index.rst  introduction.rst  provider_configuration.rst  signals.rst  templates.rst  views.rst
docs/usersessions/: adapter.rst  configuration.rst  index.rst  installation.rst  introduction.rst  signals.rst
example/: README.rst  example.db  local_settings.example  manage.py  requirements.txt  settings.py  urls.py
example/example/: local_settings.example  settings.py  urls.py
examples/react-spa/: Makefile  README.org  docker-compose.dev.yml  docker-compose.yml  e2e.spec.js  traefik.toml
examples/regular-django/: .dockerignore  .gitignore  Dockerfile  Makefile  README.org  README.rst  docker-compose.keycloak.yml  docker-compose.yml  manage.py  requirements.txt
test_swappable_app/: models.py
test_swappable_app/migrations/: 0001_initial.py
tests/: conftest.py  mocking.py  settings.py  urls.py
tests/account_only/: settings.py  urls.py
tests/apps/: test_templates.py  test_utils.py
tests/common/: adapters.py  phone_stub.py  settings.py  urls.py
tests/headless_only/: settings.py  urls.py
tests/login_required_mw/: middleware.py  settings.py  urls.py
tests/regular/: settings.py  urls.py
(+2350 files in other folders)
