[metadata]
name = django-allauth
version = attr: allauth.__version__
url = https://www.intenct.nl/projects/django-allauth/
author = Raymond Penners
author_email = raymond.penners@intenct.nl
description = Integrated set of Django applications addressing authentication, registration, account management as well as 3rd party (social) account authentication.
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
project_urls =
    Documentation = https://django-allauth.readthedocs.io/en/latest/
    Changelog = https://github.com/pennersr/django-allauth/blob/main/ChangeLog.rst
    Source = https://github.com/pennersr/django-allauth
    Tracker = https://github.com/pennersr/django-allauth/issues
    Donate = https://github.com/sponsors/pennersr

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
tests_require =
    Pillow >= 9.0
    pytest >= 7.4
    pytest-django >= 4.5.2
install_requires =
    Django >= 3.1
    python3-openid >= 3.0.8
    requests-oauthlib >= 0.3.0
    requests >= 2.0.0
    pyjwt[crypto] >= 1.7

[options.extras_require]
saml = python3-saml>=1.15.0,<2.0.0


[options.packages.find]
exclude =
    example


[isort]
indent=4
combine_star=1
combine_as_imports=1
include_trailing_comma=1
multi_line_output=3
lines_after_imports=2
known_django=django
extra_standard_library=types,requests
known_first_party=allauth
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[flake8]
max-line-length = 88
# Black
ignore = E203, W503, E501, E231
