[metadata]
name = django-allauth
version = attr: allauth.__version__
url = https://allauth.org
author = Raymond Penners
author_email = raymond.penners@intenct.nl
description = Integrated set of Django applications addressing authentication, registration, account management as well as 3rd party (social) account authentication.
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
project_urls =
    Documentation = https://docs.allauth.org/en/latest/
    Changelog = https://github.com/pennersr/django-allauth/blob/main/ChangeLog.rst
    Source = https://github.com/pennersr/django-allauth
    Tracker = https://github.com/pennersr/django-allauth/issues
    Donate = https://github.com/sponsors/pennersr

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
tests_require =
    Pillow >= 9.0
    pytest >= 7.4
    pytest-django >= 4.5.2
install_requires =
    Django >= 3.2

[options.extras_require]
mfa =
    qrcode >= 7.0.0
openid =
    python3-openid >= 3.0.8
saml =
    python3-saml>=1.15.0,<2.0.0
steam =
    python3-openid >= 3.0.8
socialaccount =
    requests-oauthlib >= 0.3.0
    requests >= 2.0.0
    pyjwt[crypto] >= 1.7

[options.packages.find]
exclude =
    examples
    tests
