[metadata]
name = django-allauth
version = attr: allauth.__version__
url = https://allauth.org
author = Raymond Penners
author_email = raymond.penners@intenct.nl
description = Integrated set of Django applications addressing authentication, registration, account management as well as 3rd party (social) account authentication.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
project_urls =
    Documentation = https://docs.allauth.org/en/latest/
    Changelog = https://codeberg.org/allauth/django-allauth/src/branch/main/ChangeLog.rst
    Source = https://codeberg.org/allauth/django-allauth
    Tracker = https://codeberg.org/allauth/django-allauth/issues
    Donate = https://github.com/sponsors/pennersr

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
tests_require =
    Pillow >= 9.0
    pytest >= 7.4
    pytest-asyncio == 0.23.8
    pytest-django >= 4.5.2
install_requires =
    Django >= 4.2.16
    asgiref >= 3.8.1

[options.extras_require]
mfa =
    qrcode >= 7.0.0
    fido2 >= 1.1.2
openid =
    python3-openid >= 3.0.8
saml =
    python3-saml>=1.15.0,<2.0.0
steam =
    python3-openid >= 3.0.8
socialaccount =
    requests-oauthlib >= 0.3.0
    requests >= 2.0.0
    pyjwt[crypto] >= 1.7

[options.packages.find]
exclude =
    examples
    tests
    tests.*

[isort]
indent=4
combine_star=1
combine_as_imports=1
include_trailing_comma=1
multi_line_output=3
lines_after_imports=2
known_django=django
extra_standard_library=types,requests
known_first_party=allauth
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[flake8]
max-line-length = 88
# Black
ignore = E203, W503, E501, E231

[mypy]
mypy_path = .
plugins =
    mypy_django_plugin.main
strict_optional = True
disable_error_code = import-untyped, import-not-found

[mypy.plugins.django-stubs]
django_settings_module = tests.regular.settings
